<resources>
    <string name="app_name">Aíma</string>
    <string name="app_name_logo">Logo Aíma</string>

    <string name="btn_entrar">Entrar</string>
    <string name="btn_cadastrar">Cadastre-se</string>
    <string name="btn_next">Próximo passo</string>

    <string name="txt_username">Nome</string>
    <string name="txt_useremail">E-mail</string>
    <string name="txt_usergenero">Identidade de gênero (opcional)</string>
    <string name="txt_usersenha">Senha</string>

    <string name="nav_menu_ciclo">Ciclo</string>
    <string name="nav_menu_conhecimentos">Conhecimentos</string>
    <string name="nav_menu_notes">Notas</string>
    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_perfil">Perfil</string>


    <string name="numDefault">0</string>
    <string name="temperatura">Temperatura:</string>
    <string name="peso">Peso:</string>
    <string name="txtSexo">Sexo:</string>
    <string name="txtMuco">Muco:</string>

    <string name="nt_btnSintoma">Adicionar sintomas do dia</string>
    <string name="nt_btnHumor">Adicionar humores do dia</string>
    <string name="nt_btnNotes">Adicionar anotação sobre o dia</string>

    <string name="txtSintomas">Sintomas</string>
    <string name="txtHumores">Humores</string>
    <string name="txtMedicamento">Medicamento</string>
    <string name="txtLua">Lua</string>
    <string name="txtAuto_cuidado">Autocuidado</string>
    <string name="txtAlimentacao">Alimentação</string>
    <string name="txtGrafico">Gráficos</string>
    <string name="txtHigiene">Higiene</string>
    <string name="txtExames">Exames médicos</string>
    <string name="txtMetas">Metas</string>

    <string name="txtDiaPeriodo">1</string>
    <string name="txtDia">dia</string>
    <string name="txtPeriodoFluxo">do seu período menstrual</string>
    <string name="txtPeriodo">Período</string>
    <string name="bg_rosa">círculo rosa</string>

    <string name="pf_txtAbout">Sobre o APP</string>
    <string name="pf_txtDuvidas">Dúvidas</string>
    <string name="pf_txtDefinicoes">Definições</string>
    <string name="pf_txtEditarPerfil">Editar perfil</string>
    <string name="pf_txtUserGenero">Identidade de gênero:</string>
    <string name="pf_txtIdade">Idade:</string>
    <string name="pf_txtNome">Nome:</string>
    <string name="pf_txtDescAvatar">Avatar do usuário</string>
    <string name="pf_txtBg_preto">bg preto</string>
    <string name="ci_txtNivelFluxo">Nível do fluxo:</string>
</resources>