<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.NotesFragment">

    <Button
        android:id="@+id/nt_btnSintoma"
        android:layout_width="0dp"
        android:layout_height="137dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/nt_btnSintoma"
        android:textColor="@color/am_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nt_btnHumor" />

    <Button
        android:id="@+id/nt_btnHumor"
        android:layout_width="0dp"
        android:layout_height="137dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/nt_btnHumor"
        android:textColor="@color/am_white"
        app:layout_constraintBottom_toTopOf="@+id/nt_btnSintoma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nt_btnNotes" />

    <Button
        android:id="@+id/nt_btnNotes"
        android:layout_width="0dp"
        android:layout_height="137dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/nt_btnNotes"
        android:textColor="@color/am_white"
        app:layout_constraintBottom_toTopOf="@+id/nt_btnHumor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

</androidx.constraintlayout.widget.ConstraintLayout>