<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/app_name_logo"
    tools:context=".activity.Login_Activity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="121dp"

        android:background="@drawable/am_background"

        app:layout_constraintBottom_toBottomOf="@+id/c_user_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/c_user_avatar"
        android:layout_width="148dp"

        android:layout_height="136dp"
        android:layout_marginTop="44dp"
        android:background="#ffffff"

        android:contentDescription="@string/app_name_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        app:srcCompat="@color/am_red"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/c_input_name"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/am_btn_esp_lado"
        android:layout_marginEnd="@dimen/am_btn_esp_lado"
        android:layout_marginBottom="8dp"
        android:hint="@string/txt_username"

        app:boxBackgroundColor="@color/common_google_signin_btn_text_dark_default"
        app:boxBackgroundMode="outline"
        app:hintTextColor="@color/am_black"

        app:layout_constraintBottom_toTopOf="@+id/c_input_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/c_user_avatar"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/c_edit_name"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/c_input_genero"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/am_btn_esp_lado"
        android:layout_marginEnd="@dimen/am_btn_esp_lado"
        android:layout_marginBottom="8dp"

        android:hint="@string/txt_usergenero"

        app:boxBackgroundColor="@color/common_google_signin_btn_text_dark_default"
        app:boxBackgroundMode="outline"
        app:hintTextColor="@color/am_black"

        app:layout_constraintBottom_toTopOf="@+id/c_input_senha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c_input_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/c_edit_genero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/c_input_senha"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/am_btn_esp_lado"
        android:layout_marginEnd="@dimen/am_btn_esp_lado"
        android:layout_marginBottom="8dp"

        android:hint="@string/txt_usersenha"

        app:boxBackgroundColor="@color/common_google_signin_btn_text_dark_default"
        app:boxBackgroundMode="outline"

        app:hintTextColor="@color/am_black"

        app:layout_constraintBottom_toTopOf="@+id/c_btn_cadastrarUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c_input_genero">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/c_edit_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/c_btn_cadastrarUser"

        android:layout_width="match_parent"
        android:layout_height="@dimen/am_btn_height"
        android:layout_marginStart="@dimen/am_btn_esp_lado"
        android:layout_marginEnd="@dimen/am_btn_esp_lado"
        android:layout_marginBottom="8dp"

        android:text="@string/btn_cadastrar"

        app:backgroundTint="@color/am_black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c_input_senha" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/c_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="@dimen/am_btn_esp_lado"
        android:layout_marginEnd="@dimen/am_btn_esp_lado"
        android:layout_marginBottom="8dp"


        android:hint="@string/txt_useremail"

        app:boxBackgroundColor="@color/common_google_signin_btn_text_dark_default"
        app:boxBackgroundMode="outline"
        app:hintTextColor="@color/am_black"

        app:layout_constraintBottom_toTopOf="@+id/c_input_genero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c_input_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/c_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>